--- a/Frontend - Angular/src/app/components/profile/change-password/change-password.component.css
+++ b/Frontend - Angular/src/app/components/profile/change-password/change-password.component.css
@@ -10,6 +10,10 @@
 	flex-direction: column;
 }
 
+.change-password-wrapper .input-area label,
+.change-password-wrapper .input-area input {
+	font-size: 1.8rem;
+}
 .change-password-wrapper .input-area input {
 	padding-inline: 1rem;
 	padding-block: 0.5rem;
