--- a/Frontend - Angular/src/app/components/profile/profile-photo/profile-photo.component.html
+++ b/Frontend - Angular/src/app/components/profile/profile-photo/profile-photo.component.html
@@ -5,6 +5,7 @@
 			[ngStyle]="{ 'background-image': 'url(' + user.profilePic + ')' }"
 		></div>
 	</div>
+	<h2 class="profile-photo-name">{{ user.name }}</h2>
 
 	<div class="profile-photo-change">
 		<div class="input-area">
