--- a/Frontend - Angular/src/app/pages/read-page/read-page.component.html
+++ b/Frontend - Angular/src/app/pages/read-page/read-page.component.html
@@ -7,7 +7,7 @@
 	<div class="img-placeholder">
 		<div
 			class="article-img"
-			[ngClass]="{ 'background-image': 'url(' + mainPost.imgUrl + ')' }"
+			[ngStyle]="{ 'background-image': 'url(' + mainPost.imgUrl + ')' }"
 		></div>
 	</div>
 	<p class="article-date">
