--- a/Frontend - Angular/src/app/pages/read-page/read-page.component.css
+++ b/Frontend - Angular/src/app/pages/read-page/read-page.component.css
@@ -15,6 +15,7 @@
 .article-wrapper {
 	width: 100%;
 	max-width: 100vw;
+	height: 100vh;
 
 	padding-inline: 2rem;
 
@@ -48,6 +49,8 @@
 		flex-direction: column;
 		align-items: center;
 		gap: 2rem;
+
+		overflow: auto;
 
 		padding-block: 3rem;
 
